--- a/thesis/chapter2.tex
+++ b/thesis/chapter2.tex
@@ -11,10 +11,10 @@ Regular expressions is a well established way of pattern matching, since the con
 \begin{itemize}
 \item \texttt{/[0-9]+\textbackslash.[0-9]+/} match floating point numbers (a dot indicates the decimal point)
 \item \texttt{/[a-z]+[a-z0-9]*/i} match an identifier, a name that must start with a character, has to be at least 1 character long and otherwise can contain alphanumeric characters (lower and upper case too)
-\item \texttt{/[0-9]+(?!\textbackslash.)/} match an integer (a sequence of numbers that is not followed by a dot)
+\item \texttt{/[0-9]+(?![0-9]*\textbackslash.)/} match an integer (a sequence of numbers that is not followed by a dot)
 \end{itemize}
 
-The first pattern makes use of ranges. Instead of having to write out all the numbers, we can just say \texttt{[0-9]}, which will match any number. Anything in a pair of square brackets is a group of possible characters in that position, for example \texttt{[abc]} would only match a, b or c. The \texttt{+} sign is a quantifier, expressing that at least one character from the group before it must be present. We can see another quantifier in the second rule, the \texttt{*} means zero or more matches of the group it is attached to. In the first and the last group, we can observe a \texttt{\textbackslash}. combination. This is required because . has a special meaning in regular expressions (it matches any character), so if we want to only match a dot, we need to escape it, which is done by adding a \texttt{\textbackslash} before it. In the second rule, we can see a modifier at the end of the expression. That modifier \texttt{i} means that the matching should be done in a case-insensitive way (the default mode is case-sensitive). In the last rule, we can see one of the more complicated kinds of expressions - at the end of the expression, there is a pattern \texttt{(?!\textbackslash.)}, which is a negative lookahead pattern. This means that the whole expression will only match if the inside of this pattern (a dot in this case) can not be matched after the examined string. The negative lookahead won't be included in the result. Several other tools are available in regular expressions to write complicated patterns (such as positive lookahead, capture groups matching exactly n times, etc.), which can make lexical analysis easier, since the regular expression parser engine is doing some of the work for us.
+The first pattern makes use of ranges. Instead of having to write out all the numbers, we can just say \texttt{[0-9]}, which will match any number. Anything in a pair of square brackets is a group of possible characters in that position, for example \texttt{[abc]} would only match a, b or c. The \texttt{+} sign is a quantifier, expressing that at least one character from the group before it must be present. We can see another quantifier in the second rule, the \texttt{*} means zero or more matches of the group it is attached to. In the first and the last group, we can observe a \texttt{\textbackslash}. combination. This is required because . has a special meaning in regular expressions (it matches any character), so if we want to only match a dot, we need to escape it, which is done by adding a \texttt{\textbackslash} before it. In the second rule, we can see a modifier at the end of the expression. That modifier \texttt{i} means that the matching should be done in a case-insensitive way (the default mode is case-sensitive). In the last rule, we can see one of the more complicated kinds of expressions - at the end of the expression, there is a pattern \texttt{(?![0-9]*\textbackslash.)}, which is a negative lookahead pattern. This means that the whole expression will only match if the inside of this pattern (some numbers and a dot in this case) can not be matched after the examined string. The negative lookahead won't be included in the result. Several other tools are available in regular expressions to write complicated patterns (such as positive lookahead, capture groups matching exactly n times, etc.), which can make lexical analysis easier, since the regular expression parser engine is doing some of the work for us.
 
 Because of the expressiveness of regular expressions, my implementation of the lexical analyser will be fairly simple, without the need of explicitly working with lookahead rules when transitioning between states, since those can be handled by carefully writing the regular expressions for the tokens.
 %----------------------------------------------------------------------------
